--- a/s1.html
+++ b/s1.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-
+  <head>
+    <title> My first page></title>
+  </head>
+  <body>
+  
+<h1> Welcome </h1>h1>
 <h2>My First Heading</h2>
 
 <p>My first paragraph.</p>
